app/stylesheets/main.scss
/* ... */
#solararrayContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 30;
}

.form-input:placeholder-shown {
  text-transform: uppercase;
  opacity: 1.0;
  background-color: rgba(255, 255, 255, 0.5);
  color: white;
  padding-left: 0.7em;
  padding-top: 0.85em;
}

.form-input::-webkit-input-placeholder{
  color: white;
}
.form-input::-moz-placeholder {
  color: white;
  text-transform: uppercase;
  opacity: 1.0;
  padding-left: 0.7em;
  padding-top: 0.85em;
}
.form-input::-ms-input-placeholder {
  color: white;
  text-transform: uppercase;
  opacity: 1.0;
  padding-left: 0.7em;
  padding-top: 0.85em;
}
.form-input:-ms-input-placeholder {
  color: white;
  text-transform: uppercase;
  opacity: 1.0;
  padding-left: 0.7em;
  padding-top: 0.45em;
}
.form-input::placeholder {
  color: white;
}

.form-input:focus {
  border: 2px solid rgb(0, 75, 145);
  background-color: rgba(255, 255, 255, 0.5);
}
.form-input {
  border: 2px solid rgba(255, 255, 255, 0.0);
  box-shadow: none;
  background-color: rgba(255, 255, 255, 0.5);
  // border: none;
  color: rgb(0, 75, 145);
  padding-left: 0.7em;
  padding-top: 0.85rem;
  margin-bottom: 2px;
}

.form-error.is-visible {
  margin-top: 5px;
  margin-bottom: 0;
}

.columns-space {
  margin-top: 1em;
}

#bericht {
  height: 6em;
}

#form-buttons {
  text-align: right;
  margin-top: 1em;
  margin-right: 1em;
}

.vertical-center {
  display: block;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.no-padding {
  padding: 0;
}

@media #{$small-only} {
  .cloud {
    opacity: 0.5;
  }
}

@media #{$medium-only} {
  .cloud {
    opacity: 0.5;
  }
}

.cloud1 {
  position: absolute;
  max-height: 100vh;
  width: auto;
  z-index: 50;
  right: 0;
  top: 50vh;
  transform: translateY(-50%);
}

.cloud2 {
  position: absolute;
  max-height: 60vh;
  width: auto;
  z-index: 50;
  left: -30vh;
  top: -25vh;
}

.cloud3 {
  position: absolute;
  max-height: 70vh;
  width: auto;
  z-index: 50;
  right: 0;
  bottom: -10vh;
}

.cloud4 {
  position: absolute;
  max-height: 100vh;
  width: auto;
  z-index: 50;
  left: 0;
  top: 50vh;
  transform: translateY(-50%);
}

.cloud5 {
  position: absolute;
  max-height: 50vh;
  width: auto;
  z-index: 50;
  right: 5vw;
  bottom: 0;
}

.email-success {
  color: #fff;
  border: none;
  padding-bottom: 0.1em;
  background-color: rgba(225, 255, 255, 0.2) !important;
  display: none;
  margin-top: 20px;
}

.close-button {
  color: white;
}

.email-fail {
  color: #fff;
  background-color: rgba(236, 38, 38, 0.8) !important;
  padding-bottom: 0.1em;
  border: none;
  display: none;
  margin-top: 20px;
}

.codestar-button[type="reset"] {
  margin-right: 3px;
}

p a {
  padding: 4px 4px 2px 4px;
  border-radius: 0.25em;
  background-color: white;
}

p a:link {
    color: #2199e8;
}

p a:visited {
    color: #2199e8;
}

p a:hover {
    color: #2199e8;
    opacity: 0.8;
}

p a:active {
    color: #2199e8;
}

.navigate-arrows {
  margin: 1rem;
  opacity: 0.5;
  position: absolute;
  right: 0;
  text-transform: uppercase;
}

.navigate-up {
  top: 0;
}

.navigate-up::after {
  content: "▲";
  margin-left: 0.4em;
}

.navigate-down {
  bottom: 0;
}

.navigate-down::after {
  content: "▼";
  margin-left: 0.4em;
}

#fp-nav ul li a span {
  background-color: white !important;
  opacity: 0.5;
}

